<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:id="@+id/add_subreddit_relative_layout"
    tools:context="com.ahleading.topaceforredditoffline.Activities.AddSubredditActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/write_name_of_subreddit_without_r"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Save options:"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/RGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">


                <RadioButton
                    android:id="@+id/dont_save_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_save_posts"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_posts_of_the_last_week"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_posts_of_the_last_month"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_posts_of_the_last_year"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_posts_of_all_time"
                    android:textSize="16sp" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="#ABB2B9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/save_up_to_str"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/RGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <RadioButton
                    android:id="@+id/save_100_posts_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_posts"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/save_200_posts_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_200_posts"
                    android:textSize="16sp" />


                <RadioButton
                    android:id="@+id/save_300_posts_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_300_posts"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/save_500_posts_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_500_posts"
                    android:textSize="16sp" />

            </RadioGroup>


            <Button
                android:id="@+id/add_subreddit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/add_subreddit"
                android:textAllCaps="false"
                android:theme="@style/Button.Tinted" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/progress_layout_add_subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#CBCBCD"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="468dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/loading_please_wait" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_add_subreddit"
        android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>

</RelativeLayout>
